Hopefully fix image squishing

--- a/assets/publications.css
+++ b/assets/publications.css
@@ -3,6 +3,9 @@ blockquote, p {
     font-style: normal;
     letter-spacing: 0;
 }
+.bibtexitem img {
+    max-width: none;
+}
 .bibtexitem {
     position: relative;
 }
